re PR fortran/43836 (ice with -fexceptions and -fopenmp)

PR fortran/43836
	* f95-lang.c (gfc_define_builtin): Set TREE_NOTHROW on
	the decl.

	* gfortran.dg/gomp/pr43836.f90: New test.

From-SVN: r158620